# HEM

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
client/js/: client.js
client/python/: client.py
dashboard/: dashboard.js  index.html  styles.css
docs/: API.md  ARCHITECTURE.md
scripts/: run_server.sh
server/: he_engine.py  main.py
server/routes/: compute.py  debug.py  keys.py
server/security/: audit.py  key_store.py
server/utils/: config.py
tests/: test_api.py  test_config.py  test_encrypt.py  test_ops.py
