[project]
name = "homomorphic-encryption-microservice"
version = "0.1.0"
description = "Educational homomorphic encryption microservice with simulated FHE and REST APIs."
authors = [{name = "Example", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.6.0",
    "requests>=2.31.0",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
development = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "black>=24.3.0",
    "httpx>=0.27.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
exclude = [".git", "__pycache__", "build", "dist", "docs"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "S", "W"]
ignore = ["S311"]
per-file-ignores = {"tests/*" = ["S101", "B905"]}

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools]
packages = ['server']
